testdata/baselines/reference/submodule/conformance/requireTwoPropertyAccesses.errors.txt
requireTwoPropertyAccesses.js(1,23): error TS2307: Cannot find module './mod' or its corresponding type declarations.


==== requireTwoPropertyAccesses.js (1 errors) ====
    const value = require("./mod").x.y
                          ~~~~~~~
!!! error TS2307: Cannot find module './mod' or its corresponding type declarations.
    console.log(value)
    
==== mod.js (0 errors) ====
    module.exports = {
        x: {
            y: "value"
        }
    }